--- a/package.json
+++ b/package.json
@@ -17,17 +17,20 @@
   },
   "homepage": "https://github.com/dasl1101/NodeJS_board#readme",
   "dependencies": {
+    "auth": "^0.0.9",
     "axios": "^1.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "box-node-sdk": "^2.7.2",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "method-override": "^3.0.0",
     "mongoose": "^6.7.2",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   }
