--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "tracer": "^1.1.6",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   }
 }
